syntax = "proto3";

package notifications;

option java_package = "ar.edu.itba.pod.grpc.notifications";
option java_multiple_files = true;
import "google/protobuf/wrappers.proto";

service NotificationService {
  rpc RegisterDoctor(Registration) returns (stream Notification);
  rpc UnregisterDoctor(Registration) returns (Notification);
}

message Registration {
  string doctorName = 1;
}

message Notification {
  string message = 1;
}